virtualbox (4.1.18-dfsg-1) UNRELEASED; urgency=low

  * New upstream release.
    - Fixes host freezes with 64-bit guests on 32-bit hosts. (LP: #1012627)
    - Fixes odd permissions of files in shared folders. (LP: #1013368)
  * Drop 37-fix-unregister-netdevice.patch, fixed upstream.

 -- Felix Geyer <debfx-pkg@fobos.de>  Thu, 21 Jun 2012 10:58:59 +0200

virtualbox (4.1.16-dfsg-2) unstable; urgency=low

  * Fix vboxnet device unregistration on kernel >= 3.2.18. (LP: #1009156)
    - Add 37-fix-unregister-netdevice.patch, backported from upstream.
  * Switch from python-central to dh_python2. (Closes: #617143)

 -- Felix Geyer <debfx-pkg@fobos.de>  Sun, 10 Jun 2012 21:32:09 +0200

virtualbox (4.1.16-dfsg-1) unstable; urgency=low

  * New upstream release.
  * Drop 37-fix-build-gcc47.patch, fixed upstream.

 -- Felix Geyer <debfx-pkg@fobos.de>  Tue, 29 May 2012 10:09:31 +0200

virtualbox (4.1.14-dfsg-2) unstable; urgency=low

  * Fix FTBFS with gcc 4.7 on i386.
    - Add 37-fix-build-gcc47.patch

 -- Felix Geyer <debfx-pkg@fobos.de>  Mon, 21 May 2012 10:39:19 +0200

virtualbox (4.1.14-dfsg-1) unstable; urgency=low

  * New upstream release.
    - Drop 36-tarball-respin.patch
  * Fix FTBFS with X Server 1.12. (Closes: #671061)
    - Add 36-fix-ftbfs-xserver-112.patch

 -- Felix Geyer <debfx-pkg@fobos.de>  Tue, 01 May 2012 20:22:40 +0200

virtualbox (4.1.12-dfsg-2) unstable; urgency=low

  * Upstream has replaced the 4.1.12 tarball with a new one that fixes a
    crash when creating host only interfaces. (Closes: #667460)
    - Add 36-tarball-respin.patch which contains the diff between the old
      and the new tarball.

 -- Felix Geyer <debfx-pkg@fobos.de>  Thu, 05 Apr 2012 12:41:55 +0200

virtualbox (4.1.12-dfsg-1) unstable; urgency=low

  * New upstream release.
  * Drop 36-ubuntu-pae.patch, applied upstream.
  * Drop 33-link-static-libgsoap.patch, fixed upstream.
  * Make the vboxpci module buildable for a i386 kernel when running amd64.
    (Closes: #664730)